checkbox alignment fix.

--- a/src/components/contact-form/contact-form.scss
+++ b/src/components/contact-form/contact-form.scss
@@ -9,6 +9,7 @@
       &.checkbox {
         flex-direction: row;
         justify-content: space-between;
+        align-items: center;
         .box {
           background: none;
           border: none;
