--- a/src/components/pricing-cards/pricing-cards.scss
+++ b/src/components/pricing-cards/pricing-cards.scss
@@ -1,4 +1,5 @@
 .pricing-cards {
+  margin-bottom: 7.2rem;
   .container {
     .title {
       margin-bottom: 7.2rem;
